--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "axios": "^1.6.8",
+    "cookie-parser": "^1.4.6",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0"
   },
