--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
