--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -7,7 +7,8 @@
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "ws": "^8.17.0"
   },
   "name": "100daysofcode",
   "version": "1.0.0",
