--- a/nodejs/day027/package.json
+++ b/nodejs/day027/package.json
@@ -12,5 +12,6 @@
     "expres": "^0.0.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
-  }
+  },
+  "devDependencies": {}
 }
